kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: todo
spec:
  replicas: 3 
  selector:
    matchLabels:
      app: homework-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: homework-server
    spec:
      nodeSelector:
        dz: dz2
      containers:
      - name: dir-server
        image: nginx:1.25.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html"]
        volumeMounts:
        - name: shared-data
          mountPath: /homework
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: shared-data
        emptyDir:
          sizeLimit: 500Mi
      - name: nginx-config-volume
        configMap:
          name: nginx-config
